Changes as requested

--- a/blog/2020-07-21-TCPILP.md
+++ b/blog/2020-07-21-TCPILP.md
@@ -1,19 +1,19 @@
 ---
-title: Influx Line Protocol on QuestDB
+title: InfluxDB Line Protocol on QuestDB
 author: David G. Simmons
 author_title: QuestDB Team
 author_url: https://github.com/davids
 author_image_url: https://avatars.githubusercontent.com/davidgs
-tags: [questdb, influx line protocol, tcp]
+tags: [questdb, InfluxDB line protocol, tcp]
 ---
 
-# Using TCP Line Protocol Writer in QuestDB
+# Using TCP InfluxDB Line Protocol writer in QuestDB
 
-We've had a UDP version of the Influx Line Protocol (ILP) reader in QuestDB for quite some time, but we've had customers ask for a TCP version of it, so we delivered!
+We've had a UDP version of the InfluxDZB Line Protocol (ILP) reader in QuestDB for quite some time, but we've had customers ask for a TCP version of it, so we delivered!
 
 Using it, and configuring it, are relatively simple so don't expect this to be a long post but I'll walk you through the basics of how to set it up and use it. For an added bonus I'll show you how to migrate from using InfluxDB to using QuestDB with a less than a line of configuration.
 
-## Configuring TCP Line Protocol Listener
+## Configuring TCP InfluxDB Line Protocol listener
 
 Here's the best part, at least for a basic implementation that you don't need to performance tune at all: It's already set up.
 
@@ -43,11 +43,11 @@ But there are a bunch of configuration options you can tune in your `conf/server
 
 You really should only need to change any of these if you're having specific performance issues around data ingestion.
 
-## Influx Line Protocol (ILP) Refresher
+## InfluxDB Line Protocol (ILP) refresher
 
 If you have used ILP before, this should all be review. If you're new to ILP, this will tell you how you should write your data to QuestDB.
 
-### Basic Structure
+### Basic structure
 
 ```script title="ILP syntax"
 table_name,tagset valueset timestamp
@@ -68,20 +68,20 @@ Finally comes your `timestamp` value, typically in µSeconds.
 
 Let's use an example of writing some environmental data to QuestDB. I have a sensor that reads temperature, atmospheric pressure, humidity, and the altitude.
 
-| Reading | Value |
-|---------|-------|
-| Temperature | 23.180000 |
-| Humidity | 51.982422 |
-| Pressure | 1002.112061 |
-| Altitude | 93.146370 |
+| Reading     | Value       |
+| ----------- | ----------- |
+| Temperature | 23.180000   |
+| Humidity    | 51.982422   |
+| Pressure    | 1002.112061 |
+| Altitude    | 93.146370   |
 
 And I want to use the following `tag`s:
 
 | Tag Name | Tag Value |
-|----------|-----------|
-| dev_id | THP002 |
-| dev_loc | Apex |
-| dev_name | BME280 |
+| -------- | --------- |
+| dev_id   | THP002    |
+| dev_loc  | Apex      |
+| dev_name | BME280    |
 
 And my `table_name` is `iot`
 
@@ -91,11 +91,11 @@ Now I have all the basic elements I need to construct my ILP, which will look li
 
 And yes, I rounded those values. But you'll notice that I did not add a `timestamp` value. In this case, it's because I am sending the values from a small, embedded sensor device that really doesn't have a great sense of time. By sening the ILP without a `timestamp` I'm telling the database itself to add one for me, using the arrival time as the `timestamp`.
 
-## Database Structure
+## Database structure
 
-One of the cool features of using the ILP reader (well, QuestDB in general really) is the ability to do 'Schema on Write`.
+One of the cool features of using the ILP reader (well, QuestDB in general really) is the ability to do 'Schema on Write'.
 
-What that means is that if a Line Protocol message arrives, QuestDB will automatically create tables and columns to fit the incoming ILP. So if you need to add a `tag` later, you can add it to the new device's tagset and start writing. The new tag will get added to the schema.
+What that means is that if an ILP message arrives, QuestDB will automatically create tables and columns to fit the incoming ILP. So if you need to add a `tag` later, you can add it to the new device's tagset and start writing. The new tag will get added to the schema.
 
 If you leave a tag value off, and it exists in the database, it will get filled with a `null` value.
 
@@ -107,7 +107,7 @@ When I start writing the above ILP to QuestDB, I'll get a table that looks like 
 
 Oh, so how did I write that ILP to QuestDB? Well, my sensor is an Arduino, with a Bosch BME280 sensor attached. It is WiFi connected, so a `WiFiClient` can do the TCP write for me:
 
-```
+```C title="WiFiClient Connect"
 espClient.connect(Quest_Server, 9009);
 ```
 Will connect the cient to the QuestDB Server definced by `Quest_Server` on port `9009`.
@@ -124,20 +124,20 @@ Of course, if you're relying on QuestDB to add `timestamps` for you, then just b
 
 ## Conclusions
 
-Influx Line Protocol (ILP) is a simple, well-known, and relatively compact data format for sending Time Series data to a database. That's why we decided to support it.
+InfluxDB Line Protocol (ILP) is a simple, well-known, and relatively compact data format for sending Time Series data to a database. That's why we decided to support it.
 
 As I told you in the beginning, I'm now going to give you a simple, less-than-one-line configuration change to migrate from using InfluxDB to using QuestDB. If you're using telegraf as a data collector, that is.
 
 Edit your `/etc/telegraf.conf` file (it may be in different places, depending on your operating system) and change the line:
 
-```
+```script
 [[outputs.influxdb]]
   urls = ["http://127.0.0.1:8086"]
 ```
 
 to be:
 
-```
+```script
 [[outputs.influxdb]]
   urls = ["tcp://127.0.0.1:9009"]
 ```
