--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -7,7 +7,7 @@ author_image_url: https://avatars.githubusercontent.com/TheTanc
 tags: [questdb, influxdb, influx line protocol, performance]
 ---
 
-InfluxDB is the current market leader in time-series, and we thought it would
+InfluxDB is the current market leader in time series, and we thought it would
 only be fair if we had a stab at their ingestion format called **Influx line
 protocol (“ILP”)** to compare data ingestion performance between QuestDB and
 InfluxDB.
