feat: implement latest feebdback
- Remove Inter fonts
- Update fonts in SVGs
- Fix titles hierarchy
- Fix wording
- Fix images shown in blog summary page

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -18,7 +18,7 @@ It would not be an overstatement to say that InfluxDB uses a lot of CPU. We set
 ourselves to build a receiver for ILP, which stores data faster than InfluxDB
 while being hardware efficient.
 
-### Why ILP?
+## Why ILP?
 
 Starting with QuestDB 4.0.4, users can ingest data through ILP to **leverage SQL
 to query Influx data alongside other tables in a relational database while
@@ -26,7 +26,7 @@ keeping the flexibility of ILP**.
 
 ![Store as many](/img/blog/2019-12-19/storeAsMany.png)
 
-### Data loss over UDP
+## Data loss over UDP
 
 We have conducted our testing over UDP, thus expecting some level of data loss.
 However, we did not anticipate that InfluxDB would lose so much.
@@ -47,7 +47,7 @@ experiment, both the sender and QuestDB/InfluxDB instance run on the same
 machine. UDP publishing is over loopback. OS is Fedora 31, OS UDP buffer size
 (net.core.rmem_max) is 104_857_600.
 
-### It comes down to ingestion speed
+## It comes down to ingestion speed
 
 Database performance is the bottleneck that results in packet loss. Messages are
 denied entry, and the loss rate is a direct function of the underlying database
@@ -73,7 +73,7 @@ single-digit rates.
 QuestDB’s ingestion speed results are obtained through ILP. Our ingestion speed
 is considerably higher while using our native input formats instead.
 
-### Why is the sender’s rate slower for InfluxDB compared to QuestDB?
+## Why is the sender’s rate slower for InfluxDB compared to QuestDB?
 
 In this test, we run the sender and the DB on the same machine, and it turns out
 that **InfluxDB slows down our UDP sender by cannibalizing the CPU**. Here is
@@ -86,7 +86,7 @@ what happens to your CPUs while using InfluxDB:
 When in use, InfluxDB saturates all of the CPU. As a consequence, it slows down
 any other program running on the same machine.
 
-### QuestDB’s secret sauce
+## QuestDB’s secret sauce
 
 We maximise the utilization of each CPU, from which we extract as much
 performance as possible. For the example below, we compared InfluxDB’s ingestion
@@ -131,7 +131,7 @@ InfluxDB grows significantly as the number of simultaneous users increases.
 > Users share CPU cores and are served concurrently, fast. They also use cores
 > to the maximum.
 
-### Get started
+## Get started
 
 QuestDB supports ILP over UDP multicast and unicast sockets. TCP support will
 follow shortly. You don’t need to change anything in your application. For
