build: optimise images on release - fixes #51

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -139,7 +139,7 @@ Telegraf, you can configure the UDP sender for QuestDB’s address and port.
 
 Follow this link to [download QuestDB](http://questdb.io/getstarted). You can
 also use our
-[sender](https://github.com/questdb/questdb/blob/master/benchmarks/src/main/java/org/questdb/LineUDPSenderMain.java)
+[sender]({@githubUrl@}/blob/master/benchmarks/src/main/java/org/questdb/LineUDPSenderMain.java)
 against QuestDB and InfluxDB to reproduce the experiment.
 
 You can use JOINs while modifying your data structure on the fly and querying it
