fix(blog): add / cleanup tags for blog posts

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -4,7 +4,7 @@ author: Tancrede Collard
 author_title: QuestDB Team
 author_url: https://github.com/TheTanc
 author_image_url: https://avatars.githubusercontent.com/TheTanc
-tags: [questdb, influxdb, influx line protocol, performance]
+tags: [questdb, influxdb, influxdb line protocol, performance]
 ---
 
 InfluxDB is the current market leader in time series, and we thought it would
