fix: correct typos + add h4 + format latest blog post + remove unnecessary "questdb" tag

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -4,8 +4,9 @@ author: Tancrede Collard
 author_title: QuestDB Team
 author_url: https://github.com/TheTanc
 author_image_url: https://avatars.githubusercontent.com/TheTanc
-tags: [questdb, influxdb, influxdb line protocol, performance]
-description: Comparison between InfluxDB and QuestDB line protocol ingestion performance.
+tags: [influxdb, influxdb line protocol, performance]
+description:
+  Comparison between InfluxDB and QuestDB line protocol ingestion performance.
 ---
 
 InfluxDB is the current market leader in time series, and we thought it would
