fix(blog): correct typo in filename + amend tags

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -4,7 +4,7 @@ author: Tancrede Collard
 author_title: QuestDB Team
 author_url: https://github.com/TheTanc
 author_image_url: https://avatars.githubusercontent.com/TheTanc
-tags: [influxdb, influxdb line protocol, performance]
+tags: [influxdb line protocol, performance]
 description:
   Comparison between InfluxDB and QuestDB regarding the performance of the line
   protocol when ingesting data.
