refactor(docs): flatten hierarchy + merge tutorials / guides

--- a/blog/2019-12-19-lineprot.md
+++ b/blog/2019-12-19-lineprot.md
@@ -140,7 +140,7 @@ QuestDB supports ILP over UDP multicast and unicast sockets. TCP support will
 follow shortly. You don’t need to change anything in your application. For
 Telegraf, you can configure the UDP sender for QuestDB’s address and port.
 
-Follow this link to [download QuestDB](/getstarted). You can also use our
+Follow this link to [download QuestDB](get-questdb). You can also use our
 [sender]({@githubUrl@}/blob/master/benchmarks/src/main/java/org/questdb/LineUDPSenderMain.java)
 against QuestDB and InfluxDB to reproduce the experiment.
 
