fix(career): improve wording

--- a/src/pages/careers/technical-content-writer.mdx
+++ b/src/pages/careers/technical-content-writer.mdx
@@ -13,12 +13,11 @@ import CareerEmailUs from "@theme/CareerEmailUs"
 <h2> About QuestDB</h2>
 
 QuestDB is the fastest open source time series database designed from the ground
-up to offer breakthrough performance for time series data without the need for
-expensive hardware. QuestDB was founded by a low-latency trading team and
-enables companies to leverage real-time and big data processing in a wide array
-of use cases and industries, from financial data to IoT and connected cars. We
-are based in London and backed by leading venture capital firms and Y
-Combinator.
+up to offer breakthrough performance for time series data. QuestDB was founded
+by a low-latency trading team and enables companies to leverage real-time data
+processing in a wide array of use cases and industries, from financial data to
+IoT and DevOps monitoring. We are a remote first company based in London and
+backed by leading venture capital firms and Y Combinator.
 
 <h2>The role</h2>
 
