--- a/src/pages/careers/backend-software-engineer.mdx
+++ b/src/pages/careers/backend-software-engineer.mdx
@@ -18,19 +18,6 @@ IoT or DevOps observability.
 We are based in London and backed by leading venture capital firms and
 YCombinator.
 
-<h2>Working at QuestDB</h2>
-
-We hire talented and passionate people who share our mission to empower
-developers to solve their problems with data. We are building breakthrough
-technology to power the infrastructure of tomorrow.
-
-- We are a company with thousands of users; our mission is to empower them.
-- We invest in a culture that promotes ownership, autonomy and independent
-  thinking.
-- We have transparent leadership and value employees' strategic inputs.
-- Our team is ambitious and tackles the most difficult problems at the deepest
-  data infrastructure layer.
-
 <h2>Software Engineer, Backend (Database)</h2>
 
 You will develop in Java and C++ to continuously improve the performance of
@@ -39,8 +26,8 @@ QuestDB open source and develop new features around scalability.
 You will ensure that QuestDB remains performant, scalable and easy to use as we
 continue to grow and roll out new features.
 
-This successful candidate will directly report to CTO Vlad Ilyushchenko and work
-closely with our experienced team of software engineers.
+This successful candidate will directly report to the CTO and work
+closely with our experienced team of talented software engineers.
 
 <h2>Requirements</h2>
 
