chore(deps): upgrade dependencies

--- a/src/pages/careers/backend-software-engineer.mdx
+++ b/src/pages/careers/backend-software-engineer.mdx
@@ -1,6 +1,6 @@
 ---
 title: Software Engineer, Backend | Careers at QuestDB
-wrapperClassname: margin-auto career
+wrapperClassName: career
 ---
 
 import CareerEmailUs from "@theme/CareerEmailUs"
