--- a/src/pages/careers/technical-content-writer.mdx
+++ b/src/pages/careers/technical-content-writer.mdx
@@ -1,6 +1,6 @@
 ---
 title: Technical Content Writer | Careers at QuestDB
-wrapperClassname: margin-auto career
+wrapperClassName: career
 ---
 
 import CareerEmailUs from "@theme/CareerEmailUs"
