--- a/src/pages/careers/backend-software-engineer.mdx
+++ b/src/pages/careers/backend-software-engineer.mdx
@@ -20,14 +20,21 @@ YCombinator.
 
 <h2>Software Engineer, Backend (Database)</h2>
 
-You will develop in Java and C++ to continuously improve the performance of
-QuestDB open source and develop new features around scalability.
+Databases are at the core of a company's infrastructure. We aim to empower
+developers around the world to solve their needs through QuestDB.
+
+You will design, code, and test across our open source time-series SQL database.
+Our goal is to continuously improve the performance of QuestDB open source,
+while developing new features around scalability. The code base is written in
+C++ and Java (zero-GC).
 
 You will ensure that QuestDB remains performant, scalable and easy to use as we
-continue to grow and roll out new features.
+continue to grow and roll out new features. Our code reaches thousands of
+developers worldwide - you will have the opportunity to interact and gather
+feedback from QuestDB's users and contributors.
 
-This successful candidate will directly report to the CTO and work
-closely with our experienced team of talented software engineers.
+This successful candidate will directly report to our CTO and work closely with
+our experienced team of software engineers.
 
 <h2>Requirements</h2>
 
