feat: add remark plugins

--- a/tutorial/2020-10-19-grafana.mdx
+++ b/tutorial/2020-10-19-grafana.mdx
@@ -317,5 +317,5 @@ between rain and the amount spent on taxi rides.
 We have learned how to import time series data into QuestDB and build a
 dashboard with multiple queries in Grafana. If you like this content and want to
 see more tutorials about third-party integrations, let us know
-[in our Slack Community](https://slack.questdb.io) or drop us a
-[star on GitHub](https://github.com/questdb/questdb/).
+[in our Slack Community]({@slackUrl@}) or drop us a
+[star on GitHub]({@githubUrl@}).
