chore: tidy up photo credit

--- a/tutorial/2020-06-15-python-questdb-tutorial.mdx
+++ b/tutorial/2020-06-15-python-questdb-tutorial.mdx
@@ -15,8 +15,8 @@ import Banner from "@theme/Banner"
   width={650}
 >
   Photo by{" "}
-  <a href="https://unsplash.com/@glenncarstenspeters">Glenn Carstens-Peters</a>
-  on <a href="https://unsplash.com">Unsplash</a>
+  <a href="https://unsplash.com/photos/npxXWgQ33ZQ">Glenn Carstens-Peters</a>{" "}
+  via <a href="https://unsplash.com">Unsplash</a>
 </Banner>
 
 This tutorial shows how to use QuestDB with a Jupyter notebook. We will learn
