--- a/tutorial/2020-07-22-influxdb-lp-on-tcp.mdx
+++ b/tutorial/2020-07-22-influxdb-lp-on-tcp.mdx
@@ -17,7 +17,7 @@ import Banner from "@theme/Banner"
   width={650}
 >
   Photo by{" "}
-  <a href="https://unsplash.com/photos/z0l-3cWpKto"> Ricardo Gomez Angel </a> on{" "}
+  <a href="https://unsplash.com/photos/z0l-3cWpKto"> Ricardo Gomez Angel </a> via{" "}
   <a href="https://unsplash.com">Unsplash</a>
 </Banner>
 
