chore: remove outbound duplicate links from tutorials page

--- a/tutorial/2020-06-15-python-questdb-tutorial.mdx
+++ b/tutorial/2020-06-15-python-questdb-tutorial.mdx
@@ -2,8 +2,8 @@
 title: Querying data in a Jupyter Notebook
 author: David G. Simmons
 description:
-  Use a Jupyter notebook to insert and query data and graph query results using
-  Python.
+  Use a Jupyter notebook to create a database, insert and query data and graph
+  the results using Python.
 ---
 
 import Banner from "@theme/Banner"
