--- a/tutorial/2021-01-18-low-code-bitcoin-ticker-workflow-with-time-series-database.mdx
+++ b/tutorial/2021-01-18-low-code-bitcoin-ticker-workflow-with-time-series-database.mdx
@@ -1,26 +1,24 @@
 ---
-title: A low-code Bitcoin ticker built with QuestDB and n8n.io
+title: A low-code bitcoin ticker built with QuestDB and n8n.io
 author: Brian Smith
 author_title: QuestDB Team
-author_url: https://github.com/bsmth
-author_image_url: https://avatars.githubusercontent.com/bsmth
 description:
   This tutorial shows how to build a bitcoin ticker for ingesting real-time data
   into QuestDB using n8n.io
-keywords:
-  - postgres
-  - timeseries
-  - database
-  - market
-  - bitcoin
-image: /img/blog/2021-01-08/banner.jpg
-tags: [n8n, automation, integration, tutorial]
+image: /img/tutorial/2021-01-18/banner.jpg
+featured: true
 ---
 
 import Banner from "@theme/Banner"
 
-<Banner alt="TODO" height={433} src="/img/blog/2021-01-08/banner.jpg" width={650}>
-  Photo by <a href="https://unsplash.com/photos/IrRbSND5EUc">Markus Winkler</a> on <a href="https://unsplash.com">Unsplash</a>
+<Banner
+  alt="TODO"
+  height={433}
+  src="/img/tutorial/2021-01-18/banner.jpg"
+  width={650}
+>
+  Photo by <a href="https://unsplash.com/photos/IrRbSND5EUc">Markus Winkler</a>{" "}
+  via <a href="https://unsplash.com">Unsplash</a>
 </Banner>
 
 We've had many predictions of the emerging trends of 2020. Three that ended up
@@ -107,7 +105,7 @@ import Screenshot from "@theme/Screenshot"
 <Screenshot
   alt="Submission form to import an n8n.io workflow from URL"
   height={284}
-  src="/img/blog/2021-01-08/imported-workflow.png"
+  src="/img/tutorial/2021-01-18/imported-workflow.png"
   title="Example QuestDB BTC ticker workflow imported from URL"
   width={650}
 />
@@ -132,10 +130,8 @@ QuestDB. In the left navigation menu, select **Credentials** -> **New** and
 choose type **QuestDB**.
 
 The default configuration provides most of the information we need for a QuestDB
-instances running locally, but we will need to make two small changes. Change
-the host field from `localhost` to `172.17.0.3` for the docker image and allow
-the QuestDB node access to these credentials in the **Nodes with access**
-section.
+instances running locally, but we will need to allow the QuestDB node access to
+these credentials in the **Nodes with access** section.
 
 When correctly set up, the credentials configuration should look like the
 following:
@@ -143,7 +139,7 @@ following:
 <Screenshot
   alt="A credentials submission form for connecting n8n.io to QuestDB"
   height={284}
-  src="/img/blog/2021-01-08/questdb-credentials.png"
+  src="/img/tutorial/2021-01-18/questdb-credentials.png"
   title="Adding connection parameters for QuestDB"
   width={650}
 />
@@ -162,7 +158,7 @@ window will display the status of the workflow:
 <Screenshot
   alt="An active n8n.io workflow writing Bitcoin market price to QuestDB"
   height={284}
-  src="/img/blog/2021-01-08/active-btc-ticker.png"
+  src="/img/tutorial/2021-01-18/active-btc-ticker.png"
   title="The active workflow writing data to QuestDB"
   width={650}
 />
@@ -177,7 +173,7 @@ returned as a table by default, but can easily be graphed by selecting the
 <Screenshot
   alt="Time series data returned by QuestDB graphed as a chart"
   height={284}
-  src="/img/blog/2021-01-08/create-chart.png"
+  src="/img/tutorial/2021-01-18/create-chart.png"
   title="Graphing our ticker data in QuestDB"
   width={650}
 />
@@ -195,7 +191,7 @@ SAMPLE BY 5m;
 <Screenshot
   alt="Time series data graphed in QuestDB using five minute aggregates"
   height={284}
-  src="/img/blog/2021-01-08/charting-aggregates.png"
+  src="/img/tutorial/2021-01-18/charting-aggregates.png"
   title="Graphing 5 minute aggregates of our ticker data in QuestDB"
   width={650}
 />
@@ -212,7 +208,7 @@ tables. We are also using the **cron** node with an interval of 1 minute, so
 improvements would be to use a node that can provide much higher rates of
 ingestion to leverage the performance benefits of QuestDB.
 
-If you like this content and our approach to non-blocking and garbage-free IO,
-or if you know of a better way to approach what we built, we'd love to know your
-thoughts! Feel free to share your feedback
-[in our Slack Community]({@slackUrl@}).
+For inspiration and troubleshooting workflow automations using n8n, take a look at the [n8n community](https://community.n8n.io/) forum.
+If you like this content, we'd love to know your
+thoughts! Feel free to share your feedback or just come and say hello in the 
+[QuestDB Community Slack]({@slackUrl@}).
