--- a/tutorial/2021-01-18-low-code-bitcoin-ticker-workflow-with-time-series-database.mdx
+++ b/tutorial/2021-01-18-low-code-bitcoin-ticker-workflow-with-time-series-database.mdx
@@ -12,7 +12,7 @@ featured: true
 import Banner from "@theme/Banner"
 
 <Banner
-  alt="TODO"
+  alt="A close-up of a laptop monitor showing a graph of data points over time"
   height={433}
   src="/img/tutorial/2021-01-18/banner.jpg"
   width={650}
