docs: changes following reviewer feedback

--- a/tutorial/2021-01-18-low-code-bitcoin-ticker-workflow-with-time-series-database.mdx
+++ b/tutorial/2021-01-18-low-code-bitcoin-ticker-workflow-with-time-series-database.mdx
@@ -80,19 +80,19 @@ This command mounts a volume with `-v` so that user configurations will be saved
 at `~/.n8n`. QuestDB can be started with the following docker command:
 
 ```
-docker run -p 9000:9000 -p 8812:8812 --name questdb questdb/questdb
+docker run -p 9000:9000 -p 8812:8812 --name questdb-n8n questdb/questdb
 ```
 
-By giving the container a name with `--name questdb`, we can reuse it at a later point and
+By giving the container a name with `--name questdb-n8n`, we can reuse it at a later point and
 the data that we have ingested will be persisted. If we want to re-run the same
 image after killing the running docker container, we can use the following
 commands:
 
 ```shell
 # bring the container up
-docker start questdb
+docker start questdb-n8n
 # shut the container down
-docker stop questdb
+docker stop questdb-n8n
 ```
 
 ## Import an example workflow
