docs: update opengraph images

--- a/tutorial/2021-02-05-streaming-heart-rate-data-with-iot-core-and-questdb.mdx
+++ b/tutorial/2021-02-05-streaming-heart-rate-data-with-iot-core-and-questdb.mdx
@@ -10,7 +10,12 @@ featured: true
 
 import Banner from "@theme/Banner"
 
-<Banner alt="TODO" height={433} src="TODO" width={650}></Banner>
+<Banner alt="TODO" height={487} src="/img/tutorial/2021-02-05/banner.jpg" width={650}>
+Photo by{" "}
+  <a href="https://unsplash.com/@luismisanchez">Luismi Sánchez
+</a>{" "}
+  via <a href="https://unsplash.com">Unsplash</a>
+</Banner>
 
 This submission comes from one of our community contributors
 [Yitaek Hwang](https://github.com/Yitaek) who has put together a nice guide for
