docs: numpy -> pandas

--- a/tutorial/2021-02-18-realtime-crypto-tracker-with-kafka-and-questdb.mdx
+++ b/tutorial/2021-02-18-realtime-crypto-tracker-with-kafka-and-questdb.mdx
@@ -24,7 +24,7 @@ This submission comes from one of our community contributors
 [Yitaek Hwang](https://github.com/Yitaek) who has put together an excellent
 tutorial that shows how to use Python to send real-time cryptocurrency metrics
 into Kafka topics, store these records in QuestDB, and perform moving average
-calculations on this time series data with numpy.
+calculations on this time series data with Pandas.
 
 Thanks for your contribution, Yitaek!
 
